# omnidoc

./: .gitignore  LICENSE  PRD.md  README.md  pyproject.toml
docs/: index.html
src/: zip_to_llm.py
tests/: test_classifier_and_runs.py  test_extract_pdf_integration.py  test_gemini_fallback.py  test_isolation.py  test_ocr_quality_gate.py  test_vision_fallback.py  test_visual_bundle.py  test_zip_to_llm.py  test_zip_to_llm_v11.py
